polishing Data Access Objects

--- a/composer.json
+++ b/composer.json
@@ -2,5 +2,7 @@
     "name": "benjaminkrehic/benjamin-krehic-project-web",
     "description": "A simple news website",
     "license": "Apache2",
-    "require": {}
+    "require": {
+        "mikecao/flight": "^1.3"
+    }
 }
