--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
     "description": "A simple news website",
     "license": "Apache2",
     "require": {
-        "mikecao/flight": "^1.3"
+        "mikecao/flight": "^1.3",
+        "zircote/swagger-php": "^3.1"
     }
 }
