--- a/api/.htaccess
+++ b/api/.htaccess
@@ -1,4 +1,5 @@
 RewriteEngine On
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
+RewriteCond %{REQUEST_FILENAME} !-f   
 RewriteRule ^(.*)$ index.php [QSA,L]
