--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
     "license": "Apache2",
     "require": {
         "mikecao/flight": "^1.3",
-        "zircote/swagger-php": "^3.1"
+        "zircote/swagger-php": "^3.1",
+        "firebase/php-jwt": "^5.3"
     }
 }
